changed anchor content

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <header>
     <nav>
-      <div class="link"><a href="https://andres-2020.github.io/odin-project-landing-page/" target="_blank">Home</a></div>
+      <div class="link"><a href="https://andres-2020.github.io/Landing-Page/" target="_blank">Home</a></div>
       <p>-</p>
       <div class="link"><a href="https://github.com/Andres-2020" target="_blank">Github</a></div>
     </nav>
